--- a/gubuntu/Dockerfile
+++ b/gubuntu/Dockerfile
@@ -27,6 +27,19 @@ RUN git clone https://github.com/zsh-users/zsh-autosuggestions ${ZSH_CUSTOM:-~/.
     sed -i 's/ZSH_THEME="robbyrussell"/ZSH_THEME="random"/' $HOME/.zshrc && \
     source ~/.zshrc
 
+# 安装 nvm (Node Version Manager)
+RUN curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.40.3/install.sh | bash
+
+# 配置 nvm 环境并安装最新 LTS 版本的 Node.js
+ENV NVM_DIR="$HOME/.nvm"
+RUN echo 'export NVM_DIR="$HOME/.nvm"' >> ~/.zshrc && \
+    echo '[ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"' >> ~/.zshrc && \
+    echo '[ -s "$NVM_DIR/bash_completion" ] && \. "$NVM_DIR/bash_completion"' >> ~/.zshrc && \
+    . ~/.nvm/nvm.sh && \
+    nvm install --lts && \
+    nvm use --lts && \
+    nvm alias default node
+
 # 配置 pip 镜像源
 RUN pip config set global.index-url https://mirrors.aliyun.com/pypi/simple && \
     pip config set global.extra-index-url "https://download.pytorch.org/whl/cpu/ https://mirrors.huaweicloud.com/ascend/repos/pypi"
