prompt(claude): 集成 commit-as-prompt 命令支持
WHAT: 添加 kingkongshot/commit-as-prompt 命令到项目配置
WHY: 提供结构化的Git提交工作流，帮助生成规范的commit message并转换为AI友好的context prompt
HOW: 通过git子模块集成prompts仓库，提供安装脚本自动部署到Claude CLI命令目录

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "alacritty/alacritty-theme"]
 	path = alacritty/alacritty-theme
 	url = https://github.com/alacritty/alacritty-theme.git
+[submodule "claude/kingkongshot_prompts"]
+	path = claude/kingkongshot_prompts
+	url = https://github.com/kingkongshot/prompts.git
