prompt(alacritty): 增强终端配置与透明效果
WHAT: 添加动态配置和环境变量设置，增强Alacritty终端功能

WHY: 提升终端用户体验，支持动态窗口调整、SSH剪贴板同步和正确的256色显示

HOW: 配置dynamic_padding和dynamic_title实现自适应窗口，设置osc52为OnlyCopy支持远程剪贴板同步，添加TERM环境变量确保正确的终端类型识别

--- a/alacritty/alacritty-linux.toml
+++ b/alacritty/alacritty-linux.toml
@@ -6,12 +6,21 @@ general.import = [
   "~/.config/alacritty/themes/dracula.toml"
 ]
 
+# 环境变量
+[env]
+TERM = "xterm-256color"
+
 [window]
 padding.x = 10
 padding.y = 10
 decorations = "Buttonless"
 opacity = 0.7
 blur = true
+dynamic_padding = true
+dynamic_title = true
+
+[terminal]
+osc52 = "OnlyCopy"
 
 [font]
 normal = { family = "FiraCode Nerd Font Mono", style = "Retina" }
