--- a/alacritty/alacritty-linux.toml
+++ b/alacritty/alacritty-linux.toml
@@ -13,7 +13,8 @@ TERM = "xterm-256color"
 [window]
 padding.x = 10
 padding.y = 10
-decorations = "Buttonless"
+# decorations = "Buttonless"
+decorations = "Full"
 opacity = 0.7
 blur = true
 dynamic_padding = true
@@ -28,10 +29,6 @@ normal = { family = "FiraCode Nerd Font Mono", style = "Retina" }
 [selection]
 save_to_clipboard = true
 
-[mouse]
-bindings = [
-    { mouse = "Right", action = "Paste" }
-]
 
 [keyboard]
 bindings = [
