--- a/alacritty/alacritty-windows.toml
+++ b/alacritty/alacritty-windows.toml
@@ -20,7 +20,7 @@ dynamic_padding = true
 dynamic_title = true
 
 [font]
-normal = { family = "FiraCode Nerd Font Mono", style = "Retina" }
+normal = { family = "FiraCode Nerd Font Mono", style = "Normal" }
 
 [terminal]
 osc52 = "OnlyCopy"
