prompt(docker): 修复vLLM昇腾Docker构建配置
WHAT: 回退vLLM镜像版本并移除多余的shell配置加载

WHY: 解决v0.11.0rc3版本的构建问题，回退到稳定的rc0版本；移除Dockerfile中无效的source命令

HOW: 将基础镜像从quay.io/ascend/vllm-ascend:v0.11.0rc3回退到v0.11.0rc0；删除RUN命令末尾的source ~/.zshrc，因为Docker RUN命令在独立shell中执行，该操作无效

--- a/gubuntu/Dockerfile
+++ b/gubuntu/Dockerfile
@@ -1,4 +1,4 @@
-FROM quay.io/ascend/vllm-ascend:v0.11.0rc3
+FROM quay.io/ascend/vllm-ascend:v0.11.0rc0
 
 RUN apt update && apt install -y zsh curl
 
@@ -6,8 +6,7 @@ RUN yes | sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/
     git clone https://github.com/zsh-users/zsh-autosuggestions ${ZSH_CUSTOM:-~/.oh-my-zsh/custom}/plugins/zsh-autosuggestions && \
     git clone https://github.com/zsh-users/zsh-syntax-highlighting ${ZSH_CUSTOM:-~/.oh-my-zsh/custom}/plugins/zsh-syntax-highlighting && \
     sed -i 's/plugins=(git)/plugins=(git zsh-autosuggestions zsh-syntax-highlighting)/' $HOME/.zshrc && \
-    sed -i 's/ZSH_THEME="robbyrussell"/ZSH_THEME="random"/' $HOME/.zshrc && \
-    source ~/.zshrc
+    sed -i 's/ZSH_THEME="robbyrussell"/ZSH_THEME="random"/' $HOME/.zshrc
 
 RUN pip config set global.index-url https://mirrors.aliyun.com/pypi/simple && \
     pip config set global.extra-index-url "https://download.pytorch.org/whl/cpu/ https://mirrors.huaweicloud.com/ascend/repos/pypi"
