prompt(docker): 配置自定义容器名称和固定镜像名称
WHAT: 配置Docker Compose支持环境变量自定义容器名称，固定构建镜像名称为g-vllm-ascend

WHY: 提升容器部署灵活性，允许用户根据需要自定义容器名称，同时保持镜像名称的一致性便于管理和识别

HOW: 在docker-compose.yml中使用环境变量vllm-guozr设置容器名称，默认为vllm-guozr；固定image配置为g-vllm-ascend；用户可通过CONTAINER_NAME环境变量覆盖默认容器名称

--- a/gubuntu/docker-compose.yml
+++ b/gubuntu/docker-compose.yml
@@ -5,7 +5,8 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: vllm-glm45v
+    image: g-vllm-ascend
+    container_name: ${CONTAINER_NAME:-vllm-guozr}
     privileged: true
     network_mode: host
     stdin_open: true
