prompt(docker): 配置容器默认工作目录为用户家目录
WHAT: 设置 Docker 容器默认工作目录为 /home/guozr

WHY: 提升开发体验，进入容器后直接位于用户工作目录，避免频繁切换路径

HOW: 在 docker-compose.yml 中添加 working_dir 配置，指定容器启动后的默认工作目录

--- a/gubuntu/docker-compose.yml
+++ b/gubuntu/docker-compose.yml
@@ -1,11 +1,10 @@
 version: '3.8'
 
 services:
-  vllm-glm45v:
+  g-vllm-ascend:
     build:
       context: .
       dockerfile: Dockerfile
-    image: g-vllm-ascend
     container_name: ${CONTAINER_NAME:-vllm-guozr}
     privileged: true
     network_mode: host
@@ -28,6 +27,8 @@ services:
       - "/dev/devmm_svm:/dev/devmm_svm"
       - "/dev/hisi_hdc:/dev/hisi_hdc"
 
+    working_dir: /home/guozr
+
     volumes:
       - /usr/local/dcmi:/usr/local/dcmi
       - /usr/local/bin/npu-smi:/usr/local/bin/npu-smi
@@ -36,6 +37,3 @@ services:
       - /etc/ascend_install.info:/etc/ascend_install.info
       - /home:/home
 
-    environment:
-      - IMAGE=vllm-ascend:v0.11.0rc0-local
-      - NAME=vllm-glm45v
