prompt(docker): 升级 pip 到最新版本
WHAT: 在 Dockerfile 中添加 pip 升级命令

WHY: 确保使用最新版本的 pip，获得更好的性能和安全性

HOW: 在配置 pip 镜像源之前先执行 pip install --upgrade pip

--- a/gubuntu/Dockerfile
+++ b/gubuntu/Dockerfile
@@ -10,5 +10,6 @@ RUN yes | sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/
     echo "source /usr/local/Ascend/ascend-toolkit/set_env.sh" >> $HOME/.zshrc && \
     echo "source /usr/local/Ascend/nnal/atb/set_env.sh" >> $HOME/.zshrc
 
-RUN pip config set global.index-url https://mirrors.aliyun.com/pypi/simple && \
+RUN pip install --upgrade pip && \
+    pip config set global.index-url https://mirrors.aliyun.com/pypi/simple && \
     pip config set global.extra-index-url "https://download.pytorch.org/whl/cpu/ https://mirrors.huaweicloud.com/ascend/repos/pypi"
