--- a/gubuntu/Dockerfile
+++ b/gubuntu/Dockerfile
@@ -11,5 +11,6 @@ RUN yes | sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/
     echo "source /usr/local/Ascend/nnal/atb/set_env.sh" >> $HOME/.zshrc
 
 RUN pip install --upgrade pip && \
+    yes | pip uninstall vllm vllm-ascend && \
     pip config set global.index-url https://mirrors.aliyun.com/pypi/simple && \
     pip config set global.extra-index-url "https://download.pytorch.org/whl/cpu/ https://mirrors.huaweicloud.com/ascend/repos/pypi"
