prompt(docker): 安装 Claude CLI 工具
WHAT: 在 Dockerfile 中添加 Claude CLI 安装命令

WHY: 在容器中预装 Claude CLI 工具，方便使用 Claude 的各种功能进行开发辅助

HOW: 使用官方安装脚本 curl -fsSL https://claude.ai/install.sh | bash 进行安装

--- a/gubuntu/Dockerfile
+++ b/gubuntu/Dockerfile
@@ -13,4 +13,5 @@ RUN yes | sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/
 RUN pip install --upgrade pip && \
     yes | pip uninstall vllm vllm-ascend && \
     pip config set global.index-url https://mirrors.aliyun.com/pypi/simple && \
-    pip config set global.extra-index-url "https://download.pytorch.org/whl/cpu/ https://mirrors.huaweicloud.com/ascend/repos/pypi"
+    pip config set global.extra-index-url "https://download.pytorch.org/whl/cpu/ https://mirrors.huaweicloud.com/ascend/repos/pypi" && \
+    curl -fsSL https://claude.ai/install.sh | bash
