prompt(docker): 添加代理设置的快捷别名
WHAT: 在 .zshrc 中添加 set_proxy 和 unset_proxy 别名

WHY: 方便在容器中快速开启和关闭代理设置，提高开发效率

HOW: 添加 set_proxy 别名设置 http_proxy 和 https_proxy 到本地代理，unset_proxy 别名清除代理环境变量

--- a/gubuntu/Dockerfile
+++ b/gubuntu/Dockerfile
@@ -8,7 +8,9 @@ RUN yes | sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/
     sed -i 's/plugins=(git)/plugins=(git zsh-autosuggestions zsh-syntax-highlighting)/' $HOME/.zshrc && \
     sed -i 's/ZSH_THEME="robbyrussell"/ZSH_THEME="random"/' $HOME/.zshrc && \
     echo "source /usr/local/Ascend/ascend-toolkit/set_env.sh" >> $HOME/.zshrc && \
-    echo "source /usr/local/Ascend/nnal/atb/set_env.sh" >> $HOME/.zshrc
+    echo "source /usr/local/Ascend/nnal/atb/set_env.sh" >> $HOME/.zshrc && \
+    echo "alias set_proxy=\"export http_proxy=http://127.0.0.1:7897 && export https_proxy=http://127.0.0.1:7897\"" >> $HOME/.zshrc && \
+    echo "alias unset_proxy=\"unset http_proxy && unset https_proxy\"" >> $HOME/.zshrc
 
 RUN pip install --upgrade pip && \
     yes | pip uninstall vllm vllm-ascend && \
