prompt(docker): 挂载 SSH 密钥到容器
WHAT: 在 docker-compose.yml 中添加 SSH 目录挂载

WHY: 让容器能够使用宿主机的 SSH 密钥进行 Git 操作和 SSH 认证，提高开发便利性

HOW: 使用只读方式挂载宿主机 ~/.ssh 到容器的 /root/.ssh，确保密钥安全且可用

--- a/gubuntu/docker-compose.yml
+++ b/gubuntu/docker-compose.yml
@@ -36,4 +36,5 @@ services:
       - /usr/local/Ascend/driver/version.info:/usr/local/Ascend/driver/version.info
       - /etc/ascend_install.info:/etc/ascend_install.info
       - /home:/home
+      - /home/guozr/.ssh:/root/.ssh:ro
 
