prompt(docker): 使用 COPY 命令将 SSH 密钥构建到镜像中
WHAT: 在 Dockerfile 中添加 SSH 密钥复制命令，移除 volume 挂载

WHY: 将 SSH 密钥直接构建到镜像中，避免运行时挂载可能带来的问题，确保密钥始终可用

HOW: 使用 COPY 命令复制 .ssh 目录下的文件到 /root/.ssh，并设置正确的文件权限（私钥 600，公钥 644）

--- a/gubuntu/Dockerfile
+++ b/gubuntu/Dockerfile
@@ -1,6 +1,13 @@
 FROM quay.io/ascend/vllm-ascend:v0.11.0rc0
 
-RUN apt update && apt install -y zsh curl
+COPY .ssh/id_ed25519 /root/.ssh/id_ed25519
+COPY .ssh/id_ed25519.pub /root/.ssh/id_ed25519.pub
+COPY .ssh/known_hosts /root/.ssh/known_hosts
+
+RUN apt update && apt install -y zsh curl && \
+    chmod 600 /root/.ssh/id_ed25519 && \
+    chmod 644 /root/.ssh/id_ed25519.pub && \
+    chmod 644 /root/.ssh/known_hosts
 
 RUN yes | sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)" && \
     git clone https://github.com/zsh-users/zsh-autosuggestions ${ZSH_CUSTOM:-~/.oh-my-zsh/custom}/plugins/zsh-autosuggestions && \
