prompt(docker): 添加本地 bin 目录到 PATH
WHAT: 在 .zshrc 中添加本地 bin 目录到 PATH 环境变量
WHY: 确保用户可以直接执行安装在 ~/.local/bin 下的工具（如 claude CLI），无需使用完整路径
HOW: 在 Dockerfile 中添加 echo 'export PATH="/home/guozr/.local/bin:/home/guozr/.local/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/usr/lib/wsl/lib:/mnt/c/Program Files/Alacritty/:/mnt/c/WINDOWS/system32:/mnt/c/WINDOWS:/mnt/c/WINDOWS/System32/Wbem:/mnt/c/WINDOWS/System32/WindowsPowerShell/v1.0/:/mnt/c/WINDOWS/System32/OpenSSH/:/mnt/c/Program Files (x86)/ZeroTier/One/:/mnt/c/Program Files/Git/cmd:/mnt/c/Program Files/WezTerm:/mnt/c/Users/guozr/AppData/Local/Microsoft/WindowsApps:/mnt/c/Users/guozr/AppData/Local/Programs/Microsoft VS Code/bin"' >> /home/guozr/.zshrc

--- a/gubuntu/Dockerfile
+++ b/gubuntu/Dockerfile
@@ -13,7 +13,8 @@ RUN yes | sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/
     echo "source /usr/local/Ascend/ascend-toolkit/set_env.sh" >> $HOME/.zshrc && \
     echo "source /usr/local/Ascend/nnal/atb/set_env.sh" >> $HOME/.zshrc && \
     echo "alias set_proxy=\"export http_proxy=http://127.0.0.1:7897 && export https_proxy=http://127.0.0.1:7897\"" >> $HOME/.zshrc && \
-    echo "alias unset_proxy=\"unset http_proxy && unset https_proxy\"" >> $HOME/.zshrc
+    echo "alias unset_proxy=\"unset http_proxy && unset https_proxy\"" >> $HOME/.zshrc && \
+    echo 'export PATH="$HOME/.local/bin:$PATH"' >> $HOME/.zshrc
 
 RUN pip install --upgrade pip && \
     yes | pip uninstall vllm vllm-ascend && \
