prompt(gubuntu): 修复 NVM 环境变量和 Node.js 默认版本设置
WHAT: 修复 NVM_DIR 环境变量路径并设置 Node.js 默认版本，确保后续构建步骤可访问 Node.js 和 Yarn

WHY: 之前的构建中硬编码 Node.js 路径 (v24.12.0) 导致脆弱性，且未设置默认版本使得后续 RUN 命令无法通过 nvm 访问 Node.js

HOW: 将 NVM_DIR 设为绝对路径 /root/.nvm；在安装后使用 nvm alias default 和 nvm use default 设置默认版本；在后续 RUN 命令中正确 source nvm.sh 以确保 yarn 和 claude-code 安装成功

--- a/gubuntu/Dockerfile
+++ b/gubuntu/Dockerfile
@@ -45,16 +45,18 @@ RUN yes | pip uninstall vllm vllm-ascend || true
 RUN pip config set global.index-url https://mirrors.aliyun.com/pypi/simple && \
     pip config set global.extra-index-url "https://download.pytorch.org/whl/cpu/ https://mirrors.huaweicloud.com/ascend/repos/pypi"
 
-ENV NVM_DIR ~/.nvm
+ENV NVM_DIR /root/.nvm
 ENV NODE_VERSION 24
 
 
 # 安装 Claude CLI - 工具安装独立层
 RUN curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.40.3/install.sh | bash \
     && . $NVM_DIR/nvm.sh \
-    && nvm install $NODE_VERSION
-RUN $NVM_DIR/versions/node/v24.12.0/bin/corepack enable yarn
-RUN yes | $NVM_DIR/versions/node/v24.12.0/bin/yarn global add @anthropic-ai/claude-code
+    && nvm install $NODE_VERSION \
+    && nvm alias default $NODE_VERSION \
+    && nvm use default
+
+RUN . $NVM_DIR/nvm.sh && corepack enable yarn && yes | yarn global add @anthropic-ai/claude-code
 
 # 配置 Git 用户信息 - 配置独立层
 RUN git config --global user.name "guozr" && \
