prompt(gubuntu): 从特定提交安装 vllm
WHAT: 卸载预装的 vllm 包并从 GitHub 特定提交重新安装 vllm
WHY: 基于镜像 quay.m.daocloud.io/ascend/vllm-ascend:v0.13.0rc1 构建时，需要使用特定版本的 vllm (dc917cceb877dfd13f98c538c4c96158047d98bd) 以确保功能兼容性
HOW: 使用 VLLM_TARGET_DEVICE=empty 环境变量安装 CPU 版本；通过 pip install -v 显示详细安装日志便于调试；从 GitHub 仓库直接安装指定 commit

--- a/gubuntu/Dockerfile
+++ b/gubuntu/Dockerfile
@@ -40,6 +40,7 @@ RUN pip install --upgrade pip
 
 # 卸载不需要的包 - 独立层，便于控制依赖
 RUN yes | pip uninstall vllm vllm-ascend || true
+RUN VLLM_TARGET_DEVICE=empty pip install -v git+https://github.com/vllm-project/vllm.git@dc917cceb877dfd13f98c538c4c96158047d98bd
 
 # 配置 pip 镜像源 - 网络相关独立配置
 RUN pip config set global.index-url https://mirrors.aliyun.com/pypi/simple && \
