fix(Dockerfile): 修复 git config 命令的语法错误
WHAT: 在 user.email 配置行末尾添加缺失的 && 连接符
WHY: 缺少连接符导致 git 命令被错误解析，构建时返回 exit code 129
HOW: 将独立的 git config 命令通过 && 连接，确保 shell 按顺序执行

--- a/gubuntu/Dockerfile
+++ b/gubuntu/Dockerfile
@@ -50,7 +50,7 @@ RUN curl -fsSL https://claude.ai/install.sh | bash
 
 # 配置 Git 用户信息 - 配置独立层
 RUN git config --global user.name "guozr" && \
-    git config --global user.email "guozr1997@hotmail.com" \
+    git config --global user.email "guozr1997@hotmail.com" && \
     git config pull.rebase true
 
 RUN pip install ruff python-lsp-server
