prompt(gubuntu): 更新 vLLM 版本与优化挂载配置
WHAT: 更新 vLLM 版本从特定 commit 为 v0.15.0 release，并优化 docker-compose volumes 配置
WHY: 使用正式 release 版本更稳定；简化 Ascend driver 挂载配置便于维护
HOW: vLLM 从 commit dc917cceb8 切换为 v0.15.0 标签；docker-compose 将 driver 子路径合并为完整路径；新增 /usr/local/sbin 和时区挂载

--- a/gubuntu/docker-compose.yml
+++ b/gubuntu/docker-compose.yml
@@ -30,10 +30,11 @@ services:
     working_dir: /home/guozr
 
     volumes:
+      - /usr/local/Ascend/driver:/usr/local/Ascend/driver
       - /usr/local/dcmi:/usr/local/dcmi
       - /usr/local/bin/npu-smi:/usr/local/bin/npu-smi
-      - /usr/local/Ascend/driver/lib64/:/usr/local/Ascend/driver/lib64/
-      - /usr/local/Ascend/driver/version.info:/usr/local/Ascend/driver/version.info
       - /etc/ascend_install.info:/etc/ascend_install.info
+      - /usr/local/sbin:/usr/local/sbin
       - /home:/home
+      - /usr/share/zoneinfo/Shanghai:/etc/localtime
 
