chore(gubuntu): 更新 SSH 密钥挂载路径
WHAT: 将容器 SSH 密钥挂载路径从 /home/guozr/.ssh 更新为 /home/jiaozeyu/.ssh

WHY: 由于更换了容器使用者，需要将 SSH 密钥挂载指向新用户的密钥路径，以匹配新的宿主机用户环境

HOW: 修改 docker-compose.yml volumes 配置，更新 .ssh 目录的只读挂载源路径

--- a/gubuntu/docker-compose.yml
+++ b/gubuntu/docker-compose.yml
@@ -37,5 +37,5 @@ services:
       - /usr/local/sbin:/usr/local/sbin
       - /home:/home
       - /usr/share/zoneinfo/Shanghai:/etc/localtime
-      - /home/guozr/.ssh:/root/.ssh:ro
+      - /home/jiaozeyu/.ssh:/root/.ssh:ro
 
