prompt(gubuntu): 配置 SSH 代理访问 GitHub
WHAT: 在容器内配置 SSH 使用代理访问 GitHub，解决网络连接问题

WHY: 容器内直接访问 GitHub 可能会因网络限制导致连接超时或失败；通过 HTTP 代理转发 SSH 流量可以确保稳定访问，支持开发工作流中的 Git 操作（clone、push、pull）

HOW: 安装 ncat 工具用于代理转发，创建 ~/.ssh/config 配置文件，设置 ProxyCommand 指令通过 127.0.0.1:6152 代理访问 github.com

--- a/gubuntu/Dockerfile
+++ b/gubuntu/Dockerfile
@@ -15,6 +15,7 @@ RUN apt-get update && \
         zsh \
         curl \
         git \
+        ncat \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
@@ -56,5 +57,13 @@ RUN curl -fsSL https://claude.ai/install.sh | bash
 RUN git config --global user.name "guozr" && \
     git config --global user.email "guozr1997@hotmail.com" && \
     git config --global pull.rebase true
+
+# 配置 SSH - 使用代理访问 GitHub
+RUN mkdir -p ~/.ssh && \
+    echo "Host github.com" >> ~/.ssh/config && \
+    echo "    Hostname github.com" >> ~/.ssh/config && \
+    echo "    User git" >> ~/.ssh/config && \
+    echo "    ProxyCommand ncat --proxy-type http --proxy 127.0.0.1:6152 %h %p" >> ~/.ssh/config && \
+    chmod 600 ~/.ssh/config
 
 RUN pip install ruff python-lsp-server
