prompt(gubuntu): 添加自动生成 SSH 密钥并移除 Claude 安装脚本
WHAT: 在容器构建时自动生成 SSH 密钥对，移除不必要的 Claude CLI 安装步骤

WHY: 自动生成 SSH 密钥可简化容器初始化流程，用户无需手动创建密钥即可进行 Git 操作；ed25519 算法比 RSA 更安全且性能更好；移除 Claude 安装可减少镜像大小和构建时间，因为容器内可能不需要独立的 Claude CLI

HOW: 使用 ssh-keygen 生成 ed25519 类型密钥对，设置正确权限（私钥 600、公钥 644），在构建时输出公钥便于用户添加到 GitHub；删除 curl 安装 Claude 的 RUN 指令

--- a/gubuntu/Dockerfile
+++ b/gubuntu/Dockerfile
@@ -51,8 +51,6 @@ RUN pip uninstall -y vllm vllm-ascend
 RUN pip config set global.index-url https://mirrors.aliyun.com/pypi/simple && \
     pip config set global.extra-index-url "https://download.pytorch.org/whl/cpu/ https://mirrors.huaweicloud.com/ascend/repos/pypi"
 
-RUN curl -fsSL https://claude.ai/install.sh | bash
-
 # 配置 Git 用户信息 - 配置独立层
 RUN git config --global user.name "guozr" && \
     git config --global user.email "guozr1997@hotmail.com" && \
@@ -65,5 +63,12 @@ RUN mkdir -p ~/.ssh && \
     echo "    User git" >> ~/.ssh/config && \
     echo "    ProxyCommand ncat --proxy-type http --proxy 127.0.0.1:6152 %h %p" >> ~/.ssh/config && \
     chmod 600 ~/.ssh/config
+
+# 生成 SSH 密钥对（ed25519 类型，更安全且更快）
+RUN ssh-keygen -t ed25519 -C "guozr-ds" -f ~/.ssh/id_ed25519 -N "" && \
+    chmod 600 ~/.ssh/id_ed25519 && \
+    chmod 644 ~/.ssh/id_ed25519.pub && \
+    echo "=== SSH Public Key (add to GitHub) ===" && \
+    cat ~/.ssh/id_ed25519.pub
 
 RUN pip install ruff python-lsp-server
